/*
 * $Id: ChangeLog,v 1.4595 2005/11/09 03:34:48 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-11-08 20:39 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbapi.h
    * Corrected bad typo pointed by Przemek
  * source/vm/fastitem.c
    * Minor formatting

2005-11-08 19:33 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    + Added missing HB_P_PLUS support in hb_vmarrayPop() for overloaded ARRAYINDEX

  * source/rtl/win32ole.prg
    % Optimized OleValue support by adding explicit Methods ::OleValue() and ::_OleValue( xSetValue )
    + Added overloading of FOR EACH to support enumeration of OLE Collections.

  * tests/testole.prg
    * Comment typo corrected

2005-11-09 02:06 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  + xharbour/tests/tstcstru1.prg
    + Like tstcstru.prg but changed to show use of
      :Pointer(), :GetPointer() and :SayMembers() methods

2005-11-09 01:27 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * xharbour/source/rtl/cstruct.prg
    * C Array class
    + Added aCMembers data
    + Added GetPointer() method returning internalbuffer pointer

    /* Missed in last change, now tests/tstcstru.prg works again */

2005-11-08 13:22 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/classes.h
  * include/hboo.ch
  * source/vm/classes.c
  * source/vm/hvm.c
    + Added support for FOR EACH operator overloading

  + tests/enumerate.prg
    + New sample of FOR EACH overloading

2005-11-08 09:58 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    * Enhanced HB_SaveBlock() & HB_RestoreBlock() to support macro compiled blocks.

2005-11-08 09:31 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/compiler/harbour.sly
    + Added logic to NOT pass BYREF variables which are declared as FIELD into DO ... WITH ...